# cairo

./: .travis.yml  Cargo.toml  appveyor.yml
cairo-sys-rs/: Cargo.toml  build.rs
cairo-sys-rs/src/: enums.rs  lib.rs
src/: context.rs  device.rs  image_surface.rs  image_surface_png.rs  lib.rs  matrices.rs  paths.rs  patterns.rs  pdf.rs  pdf_surface.rs  prelude.rs  ps.rs  quartz_surface.rs  recording_surface.rs  region.rs  support.rs  surface.rs  svg.rs  svg_surface.rs  win32_surface.rs  xcb.rs
src/font/: font_face.rs  scaled_font.rs
