[package]
name = "cairo-rs"
version = "0.0.7"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"

description = "Rust bindings for the Cairo library"
repository = "https://github.com/gtk-rs/cairo"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/cairo/"

readme = "README.md"

keywords = ["cairo", "gtk", "gtk-rs", "gnome", "GUI"]

[lib]
name = "cairo"

[dependencies]
libc = "0.1"
c_vec = "~1.0"
cairo-sys-rs = "0.2.1"
glib = "0.0.7"
