[package]
name = "cairo-sys-rs"
version = "0.2.1"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "cairo"

description = "FFI bindings to Cairo"
repository = "https://github.com/gtk-rs/cairo"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/cairo_sys/"

keywords = ["cairo", "ffi", "gtk", "gtk-rs", "gnome"]

[lib]
name = "cairo_sys"

[dependencies]
libc = "0.1"

[build-dependencies]
pkg-config = "0.3.5"
